fix spacing

--- a/src/components/InspoSection/InspoSection.module.scss
+++ b/src/components/InspoSection/InspoSection.module.scss
@@ -4,7 +4,7 @@
 	width: 100%;
 	padding-top: pxToRem(70px);
 	padding-bottom: pxToRem(101px);
-	padding-right: pxToRem(100px);
+	padding-right: pxToRem(10px);
 
 	h2 {
 		margin-bottom: pxToRem(12px);
